--- a/css/style.css
+++ b/css/style.css
@@ -244,19 +244,38 @@ img{
     width: 95%;
     padding: 5rem;
 }
+
 .campo{
-    display: flex;
-    margin-bottom: 2rem;
-    gap: 2rem;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
 }
 .campo__label{
-    flex: 0 0 9rem;
-    text-align: right;
+    width: 100%;
 }
 .campo__field{
-    flex: 1;
+    width: 100%;
     border: 1px solid var(--claro);
 }
 .campo__field--textarea{
     height: 20rem;
+}
+
+@media (min-width: 768px) { 
+    .campo{
+        display: flex;
+        margin-bottom: 2rem;
+        gap: 2rem;
+    }
+    .campo__label{
+        flex: 0 0 9rem;
+        text-align: right;
+    }
+    .campo__field{
+        flex: 1;
+        border: 1px solid var(--claro);
+    }
+    .campo__field--textarea{
+        height: 20rem;
+    }
 }
