--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,19 @@ img{
 }
 
 /** Contacto **/
+.error{
+    background-color: rgb(185, 0, 0);
+    color: var(--blanco);
+    text-align: center;
+    padding: 2rem;
+}
+.guardado{
+    background-color: rgb(16, 48, 233);
+    color: var(--blanco);
+    text-align: center;
+    padding: 2rem;
+}
+
 .contacto-bg{
     background-image: url(../img/contacto.jpg);
     height: 40rem;
